--- a/ajtcl/Makefile
+++ b/ajtcl/Makefile
@@ -64,7 +64,7 @@ define Build/Compile
 	CROSS_CFLAGS="$(TARGET_CFLAGS) $(EXTRA_CFLAGS) $(TARGET_CPPFLAGS) -DOPENWRT_MIPS" \
 	CROSS_LINKFLAGS="$(TARGET_LINKFLAGS) $(TARGET_LDFLAGS)" \
 	CROSS_PATH=$(TARGET_PATH) \
-	CROSS_PREFIX=mips-openwrt-linux-uclibc- \
+	CROSS_PREFIX=$(REAL_GNU_TARGET_NAME)- \
 	scons -C $(PKG_BUILD_DIR) \
 		$(PKG_JOBS) \
 		WS=off \
