--- a/ajtcl-alljoynjsIO/Makefile
+++ b/ajtcl-alljoynjsIO/Makefile
@@ -1,6 +1,6 @@
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=ajtcl-alljoynjs
+PKG_NAME:=ajtcl-alljoynjsIO
 PKG_VERSION:=RB15.04
 PKG_RELEASE:=1
 
@@ -63,6 +63,7 @@ define Build/Configure/Default
 endef
 
 define Build/Compile
+    YUN_BUILD=1 \
 	CROSS_CFLAGS="-I$(STAGING_DIR)/usr/src/duktape/src -I$(STAGING_DIR)/usr/include/ajtcl $(TARGET_CFLAGS) $(EXTRA_CFLAGS) $(TARGET_CPPFLAGS)" \
 	CROSS_LINKFLAGS="$(TARGET_LINKFLAGS) $(TARGET_LDFLAGS) -lajtcl_services" \
 	CROSS_PATH=$(TARGET_PATH) \
